--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
+    background-color: rgb(21, 21, 73);
+    color: white;
 }
 h1 {
     margin-top: 50px;
